fix logo on mobile

--- a/src/styles/pages/page.css
+++ b/src/styles/pages/page.css
@@ -7,6 +7,7 @@
     position: sticky;
     top: var(--nav-height);
     grid-column: 1 / -1;
+    background-color: var(--white-75);
     backdrop-filter: blur(10px);
     padding: 1px 1.2rem 4px 1.2rem;
     margin: 0 -1.2rem;
